--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -263,7 +263,7 @@
   <string name="CustomDefaultPreference_none">Κανένα</string>
   <!--DateUtils-->
   <string name="DateUtils_just_now">Τώρα</string>
-  <string name="DateUtils_minutes_ago">%d λεπ</string>
+  <string name="DateUtils_minutes_ago">%dλ</string>
   <string name="DateUtils_today">Σήμερα</string>
   <string name="DateUtils_yesterday">Χθες</string>
   <!--DeliveryStatus-->
@@ -565,9 +565,10 @@
   <string name="RegistrationActivity_enter_the_code_we_sent_to_s">Εισάγετε τον κωδικό που στείλαμε στο %s</string>
   <string name="RegistrationActivity_call">Κλήση</string>
   <!--RevealableMessageView-->
-  <string name="RevealableMessageView_view_photo">Προβολή φωτογραφίας</string>
-  <string name="RevealableMessageView_viewed">Διαβάστηκε</string>
   <string name="RevealableMessageView_photo">Φωτογραφία</string>
+  <string name="RevealableMessageView_video">Βίντεο</string>
+  <string name="RevealableMessageView_viewed">Διαβάστηκε</string>
+  <string name="RevealableMessageView_outgoing_media">Πολυμέσα</string>
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">Αποτυχία αποθήκευσης των αλλαγών της εικόνας</string>
   <!--Search-->
@@ -663,6 +664,7 @@
   <string name="VerifyIdentityActivity_no_safety_number_to_compare_was_found_in_the_clipboard">Δε βρέθηκε αριθμός ασφαλείας στο πρόχειρο για να γίνει σύγκριση</string>
   <string name="VerifyIdentityActivity_signal_needs_the_camera_permission_in_order_to_scan_a_qr_code_but_it_has_been_permanently_denied">Το Signal χρειάζεται τα δικαιώματα Κάμερας για να μπορέσουμε να σκανάρουμε τον κωδικό QR, αλλά αυτά δεν έχουν δοθεί μόνιμα. Παρακαλώ πηγαίνετε στις ρυθμίσεις εφαρμογών, επιλέξτε τα \"Δικαιώματα\", και ενεργοποιήστε την \"Κάμερα\".</string>
   <string name="VerifyIdentityActivity_unable_to_scan_qr_code_without_camera_permission">Δεν μπορούμε να σκανάρουμε τον QR κωδικό χωρίς τα δικαιώματα Κάμερας</string>
+  <!--ViewOnceMessageActivity-->
   <!--MessageDisplayHelper-->
   <string name="MessageDisplayHelper_bad_encrypted_message">Μήνυμα με πρόβλημα στην κρυπτογράφησή του</string>
   <string name="MessageDisplayHelper_message_encrypted_for_non_existing_session">Το μήνυμα κρυπτογραφήθηκε για μη υπάρχον session</string>
@@ -831,6 +833,7 @@
   <string name="QuoteView_audio">Ήχος</string>
   <string name="QuoteView_video">Βίντεο</string>
   <string name="QuoteView_photo">Φωτογραφία</string>
+  <string name="QuoteView_media">Μήνυμα πολυμέσων</string>
   <string name="QuoteView_sticker">Αυτοκόλλητο</string>
   <string name="QuoteView_document">Έγγραφο</string>
   <string name="QuoteView_you">Εσείς</string>
@@ -1041,10 +1044,6 @@
   <string name="arrays__high">Υψηλό</string>
   <string name="arrays__max">Μέγιστο</string>
   <!--plurals.xml-->
-  <plurals name="hours_ago">
-    <item quantity="one">%d ώρα</item>
-    <item quantity="other">%d ώρες</item>
-  </plurals>
   <!--preferences.xml-->
   <string name="preferences__sms_mms">SMS και MMS</string>
   <string name="preferences__pref_all_sms_title">Λήψη όλων των SMS</string>
@@ -1112,6 +1111,7 @@
   <string name="preferences__linked_devices">Συνδεδεμένες συσκευές</string>
   <string name="preferences__light_theme">Φωτεινό</string>
   <string name="preferences__dark_theme">Σκοτεινό</string>
+  <string name="preferences__system_theme">Σύστημα</string>
   <string name="preferences__appearance">Εμφάνιση</string>
   <string name="preferences__theme">Θέμα</string>
   <string name="preferences__default">Προκαθορισμένο</string>
