--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -323,7 +323,7 @@
   <string name="CustomDefaultPreference_none">لا شيء </string>
   <!--DateUtils-->
   <string name="DateUtils_just_now">الآن</string>
-  <string name="DateUtils_minutes_ago">%d دقيقة</string>
+  <string name="DateUtils_minutes_ago">%dm</string>
   <string name="DateUtils_today">اليوم</string>
   <string name="DateUtils_yesterday">البارحة</string>
   <!--DeliveryStatus-->
@@ -621,9 +621,10 @@
   <string name="RegistrationActivity_enter_the_code_we_sent_to_s">أدخل الرمز الذي أرسلناه إلى%s</string>
   <string name="RegistrationActivity_call">اتصل</string>
   <!--RevealableMessageView-->
-  <string name="RevealableMessageView_view_photo">مشاهدة الصورة</string>
-  <string name="RevealableMessageView_viewed">تمت المشاهدة</string>
   <string name="RevealableMessageView_photo">صورة</string>
+  <string name="RevealableMessageView_video">فيديو</string>
+  <string name="RevealableMessageView_viewed">تمت المشاهدة</string>
+  <string name="RevealableMessageView_outgoing_media">الوسائط</string>
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">تعذر حفظ التغييرات بالصورة</string>
   <!--Search-->
@@ -715,6 +716,7 @@
   <string name="VerifyIdentityActivity_no_safety_number_to_compare_was_found_in_the_clipboard">لم يُعثر على رقم أمان في الحافظة من أجل المقارنة</string>
   <string name="VerifyIdentityActivity_signal_needs_the_camera_permission_in_order_to_scan_a_qr_code_but_it_has_been_permanently_denied">يحتاج Signal إلى إذن الكاميرا من أجل مسح رمز الاستجابة السريع QR ولكن تم إيقاف الإذن على نحو دائم، رجاء زيارة إعدادات التطبيق ثم \"الأذونات\"، ثم تفعيل \"الكاميرا\".</string>
   <string name="VerifyIdentityActivity_unable_to_scan_qr_code_without_camera_permission">لا يمكن مسح رمز الإستجابة السريعة QR بدون إذن استخدام الكاميرا</string>
+  <!--ViewOnceMessageActivity-->
   <!--MessageDisplayHelper-->
   <string name="MessageDisplayHelper_bad_encrypted_message">رسالة مشفرة رديئة</string>
   <string name="MessageDisplayHelper_message_encrypted_for_non_existing_session">الرسالة مشفرة دون وجود قناة اتصال...</string>
@@ -884,6 +886,7 @@
   <string name="QuoteView_audio">صوت</string>
   <string name="QuoteView_video">فيديو</string>
   <string name="QuoteView_photo">صورة</string>
+  <string name="QuoteView_media">رسائل الاعلام</string>
   <string name="QuoteView_sticker">ملصق</string>
   <string name="QuoteView_document">مستند</string>
   <string name="QuoteView_you">أنت</string>
@@ -1110,14 +1113,6 @@
   <string name="arrays__high">عالي</string>
   <string name="arrays__max">الأقصى</string>
   <!--plurals.xml-->
-  <plurals name="hours_ago">
-    <item quantity="zero">%d ساعة</item>
-    <item quantity="one">%d ساعة</item>
-    <item quantity="two">%d ساعتين</item>
-    <item quantity="few">%d ساعات</item>
-    <item quantity="many">%d ساعة</item>
-    <item quantity="other">%d ساعة</item>
-  </plurals>
   <!--preferences.xml-->
   <string name="preferences__sms_mms">رسالة نصية ورسالة وسائط متعددة</string>
   <string name="preferences__pref_all_sms_title">اإستقبال كل الرسائل النصية</string>
@@ -1385,6 +1380,7 @@
   <string name="ProgressPreference_d_messages_so_far">%dرسالة إلى الآن</string>
   <string name="RegistrationActivity_please_enter_the_verification_code_sent_to_s">رجاء إدخال كود التحقق الذي تم إرساله إلى %s.</string>
   <string name="RegistrationActivity_wrong_number">رقم خاطئ </string>
+  <string name="RegistrationActivity_contact_signal_support">الاتصال بخدمة دعم تطبيق Signal</string>
   <string name="BackupUtil_never">أبدا</string>
   <string name="BackupUtil_unknown">مجهول</string>
   <string name="preferences_app_protection__screen_lock">قفل الشاشة</string>
