--- a/res/values-az/strings.xml
+++ b/res/values-az/strings.xml
@@ -251,7 +251,7 @@
   <string name="CustomDefaultPreference_none">Heç biri</string>
   <!--DateUtils-->
   <string name="DateUtils_just_now">İndi</string>
-  <string name="DateUtils_minutes_ago">%d dəq</string>
+  <string name="DateUtils_minutes_ago">%dm</string>
   <string name="DateUtils_today">Bu gün</string>
   <string name="DateUtils_yesterday">Dünən</string>
   <!--DeliveryStatus-->
@@ -551,6 +551,8 @@
   <string name="RegistrationActivity_call">Zəng et</string>
   <!--RevealableMessageView-->
   <string name="RevealableMessageView_photo">Şəkil</string>
+  <string name="RevealableMessageView_video">Video</string>
+  <string name="RevealableMessageView_outgoing_media">Media</string>
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">Şəkilə olan dəyişiklikləri yadda saxlaya bilmədik</string>
   <!--Search-->
@@ -640,6 +642,7 @@
   <string name="VerifyIdentityActivity_no_safety_number_to_compare_was_found_in_the_clipboard">Mübadilə buferində müqayisə etmək üçün təhlükəsizlik rəqəmi tapılmadı</string>
   <string name="VerifyIdentityActivity_signal_needs_the_camera_permission_in_order_to_scan_a_qr_code_but_it_has_been_permanently_denied">QR şifrəni skan edə bilməsi üçün Signal-ın Kamera seçimlərinə giriş icazəsi olmalıdır ki, o da hal hazırda qadağa edilmişdir. Davam edə bilmək üçün zəhmət olmasa aplikasiya parametrləri menyusuna, oradan isə \"İcazələr bölməsinə keçərək \"Kamera\" hissəsini aktivləşdir.</string>
   <string name="VerifyIdentityActivity_unable_to_scan_qr_code_without_camera_permission">Kameraya giriş icazəsi olmadan QR şifrəni skan etmək mümkün deyil</string>
+  <!--ViewOnceMessageActivity-->
   <!--MessageDisplayHelper-->
   <string name="MessageDisplayHelper_bad_encrypted_message">Pis şifrələnmiş mesaj</string>
   <string name="MessageDisplayHelper_message_encrypted_for_non_existing_session">Mesaj mövcud olmayan sessiya üçün şifrələnib</string>
@@ -804,6 +807,7 @@
   <string name="QuoteView_audio">Səs</string>
   <string name="QuoteView_video">Video</string>
   <string name="QuoteView_photo">Şəkil</string>
+  <string name="QuoteView_media">Media mesajı</string>
   <string name="QuoteView_sticker">Sticker</string>
   <string name="QuoteView_document">Sənəd</string>
   <string name="QuoteView_you">Sən</string>
@@ -1014,10 +1018,6 @@
   <string name="arrays__high">Uca</string>
   <string name="arrays__max">Maksimum</string>
   <!--plurals.xml-->
-  <plurals name="hours_ago">
-    <item quantity="one">%d saat</item>
-    <item quantity="other">%d saat</item>
-  </plurals>
   <!--preferences.xml-->
   <string name="preferences__sms_mms">SMS və MMS</string>
   <string name="preferences__pref_all_sms_title">Bütün SMS-ləri al</string>
