--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -253,7 +253,7 @@
   <string name="CustomDefaultPreference_none">Нищо</string>
   <!--DateUtils-->
   <string name="DateUtils_just_now">Току що</string>
-  <string name="DateUtils_minutes_ago">%d мин</string>
+  <string name="DateUtils_minutes_ago">%dm</string>
   <string name="DateUtils_today">Днес</string>
   <string name="DateUtils_yesterday">Вчера</string>
   <!--DeliveryStatus-->
@@ -549,6 +549,8 @@
   <string name="RegistrationActivity_call">Обаждане</string>
   <!--RevealableMessageView-->
   <string name="RevealableMessageView_photo">Снимка</string>
+  <string name="RevealableMessageView_video">Видео</string>
+  <string name="RevealableMessageView_outgoing_media">Медия</string>
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">Неуспешнп запазване на промененото изображение</string>
   <!--Search-->
@@ -642,6 +644,7 @@
   <string name="VerifyIdentityActivity_no_safety_number_to_compare_was_found_in_the_clipboard">Не са открити копирани числа за сигурност</string>
   <string name="VerifyIdentityActivity_signal_needs_the_camera_permission_in_order_to_scan_a_qr_code_but_it_has_been_permanently_denied">Signal се нуждае от достъп до камерата Ви, за да може да сканирва QR кодове, но той му е отказан. Моля, отидете на настройки в менюто и изберете \"Разрешения\" и \"Камера\".</string>
   <string name="VerifyIdentityActivity_unable_to_scan_qr_code_without_camera_permission">Неуспешно сканирване на QR код без разрешение за достъп до камерата</string>
+  <!--ViewOnceMessageActivity-->
   <!--MessageDisplayHelper-->
   <string name="MessageDisplayHelper_bad_encrypted_message">Грешно криптирано съобщение</string>
   <string name="MessageDisplayHelper_message_encrypted_for_non_existing_session">Съобщението е криптирано за несъществуаща сесия</string>
@@ -808,6 +811,7 @@
   <string name="QuoteView_audio">Аудио</string>
   <string name="QuoteView_video">Видео</string>
   <string name="QuoteView_photo">Снимка</string>
+  <string name="QuoteView_media">Медийно съобщение</string>
   <string name="QuoteView_sticker">Стикер</string>
   <string name="QuoteView_document">Документ</string>
   <string name="QuoteView_you">Ти</string>
@@ -1018,10 +1022,6 @@
   <string name="arrays__high">Високо</string>
   <string name="arrays__max">Максимално</string>
   <!--plurals.xml-->
-  <plurals name="hours_ago">
-    <item quantity="one">%d час</item>
-    <item quantity="other">%d часа</item>
-  </plurals>
   <!--preferences.xml-->
   <string name="preferences__sms_mms">SMS и MMS</string>
   <string name="preferences__pref_all_sms_title">Използване за всички SMS-и</string>
