--- a/res/values-eo/strings.xml
+++ b/res/values-eo/strings.xml
@@ -579,9 +579,10 @@
   <string name="RegistrationActivity_enter_the_code_we_sent_to_s">Bv. entajpi la kontrolkodon senditan al %s.</string>
   <string name="RegistrationActivity_call">Alvoko</string>
   <!--RevealableMessageView-->
-  <string name="RevealableMessageView_view_photo">Vidi foton</string>
-  <string name="RevealableMessageView_viewed">Vidita</string>
   <string name="RevealableMessageView_photo">Foto</string>
+  <string name="RevealableMessageView_video">Videaĵo</string>
+  <string name="RevealableMessageView_viewed">Vidita</string>
+  <string name="RevealableMessageView_outgoing_media">Aŭdvidaĵo</string>
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">Malsukcesis konservi bildajn ŝanĝojn</string>
   <!--Search-->
@@ -677,6 +678,7 @@ Ricevis mesaĝon pri interŝanĝo de ŝlosiloj por nevalida protokola versio.
   <string name="VerifyIdentityActivity_no_safety_number_to_compare_was_found_in_the_clipboard">Neniu sekuriga numero komparota troveblis en la tondujo</string>
   <string name="VerifyIdentityActivity_signal_needs_the_camera_permission_in_order_to_scan_a_qr_code_but_it_has_been_permanently_denied">Signal bezonas la Fotilo-permeson por skani rapidrespondan (QR) kodon, sed ĝi estis porĉiame malakceptita. Bonvolu daŭrigi al la aplikaĵaj agordoj, elekti „Permesoj“, kaj ŝalti „Fotilo“.</string>
   <string name="VerifyIdentityActivity_unable_to_scan_qr_code_without_camera_permission">Ne eblas skani rapidrespondan (QR) kodon sen Fotilo-permeso</string>
+  <!--ViewOnceMessageActivity-->
   <!--MessageDisplayHelper-->
   <string name="MessageDisplayHelper_bad_encrypted_message">Malbone ĉifrita mesaĝo</string>
   <string name="MessageDisplayHelper_message_encrypted_for_non_existing_session">Mesaĝo ĉifrita por neekzistanta seanco</string>
@@ -853,6 +855,7 @@ Ricevis mesaĝon pri interŝanĝo de ŝlosiloj por nevalida protokola versio.
   <string name="QuoteView_audio">Sonaĵo</string>
   <string name="QuoteView_video">Videaĵo</string>
   <string name="QuoteView_photo">Foto</string>
+  <string name="QuoteView_media">Aŭdvida mesaĝo</string>
   <string name="QuoteView_sticker">Glumarko</string>
   <string name="QuoteView_document">Dokumento</string>
   <string name="QuoteView_you">Vi</string>
@@ -1063,10 +1066,6 @@ Ricevis mesaĝon pri interŝanĝo de ŝlosiloj por nevalida protokola versio.
   <string name="arrays__high">Alta</string>
   <string name="arrays__max">Maksimuma</string>
   <!--plurals.xml-->
-  <plurals name="hours_ago">
-    <item quantity="one">%d horo</item>
-    <item quantity="other">%d horoj</item>
-  </plurals>
   <!--preferences.xml-->
   <string name="preferences__sms_mms">SMS kaj MMS</string>
   <string name="preferences__pref_all_sms_title">Ricevi ĉiujn mesaĝetojn (SMS)</string>
@@ -1134,6 +1133,7 @@ Ricevis mesaĝon pri interŝanĝo de ŝlosiloj por nevalida protokola versio.
   <string name="preferences__linked_devices">Ligitaj aparatoj</string>
   <string name="preferences__light_theme">Hela</string>
   <string name="preferences__dark_theme">Malhela</string>
+  <string name="preferences__system_theme">Sistema</string>
   <string name="preferences__appearance">Aspekto</string>
   <string name="preferences__theme">Etoso</string>
   <string name="preferences__default">Defaŭlta</string>
