--- a/res/values-eu/strings.xml
+++ b/res/values-eu/strings.xml
@@ -273,7 +273,7 @@
   <string name="CustomDefaultPreference_none">Bat ere ez</string>
   <!--DateUtils-->
   <string name="DateUtils_just_now">Orain</string>
-  <string name="DateUtils_minutes_ago">%d min</string>
+  <string name="DateUtils_minutes_ago">%dm</string>
   <string name="DateUtils_today">Gaur</string>
   <string name="DateUtils_yesterday">Atzo</string>
   <!--DeliveryStatus-->
@@ -580,9 +580,10 @@ zenbakia (%s) baliogabea da.
   <string name="RegistrationActivity_enter_the_code_we_sent_to_s">Sartu %s telefonora bidali dugun kodea.</string>
   <string name="RegistrationActivity_call">Deitu</string>
   <!--RevealableMessageView-->
-  <string name="RevealableMessageView_view_photo">Ikusi argazkia</string>
-  <string name="RevealableMessageView_viewed">Ikusita</string>
   <string name="RevealableMessageView_photo">Argazkia</string>
+  <string name="RevealableMessageView_video">Bideoa</string>
+  <string name="RevealableMessageView_viewed">Ikusita</string>
+  <string name="RevealableMessageView_outgoing_media">Media</string>
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">Irudien aldaketak gordetzeak huts egin du</string>
   <!--Search-->
@@ -679,6 +680,7 @@ Gakoaren elkar-trukeraro mezua jaso da protokoloaren bertsio baliogabe baterako.
   <string name="VerifyIdentityActivity_no_safety_number_to_compare_was_found_in_the_clipboard">Ez da aurkitu konparantzeko segurtasun zenbakirik arbelean</string>
   <string name="VerifyIdentityActivity_signal_needs_the_camera_permission_in_order_to_scan_a_qr_code_but_it_has_been_permanently_denied">Signalek Kamera baimena behar du QR kodea eskaneatzeko baina ukatu egin diozu. Joan aplikazioaren ezarpenetara, aukeratu \"Baimenak\" eta aktibatu \"Kamera\".</string>
   <string name="VerifyIdentityActivity_unable_to_scan_qr_code_without_camera_permission">Ezin da QR kodea eskaneatu Kamera baimen gabe</string>
+  <!--ViewOnceMessageActivity-->
   <!--MessageDisplayHelper-->
   <string name="MessageDisplayHelper_bad_encrypted_message">Gaizki enkriptatuko mezua</string>
   <string name="MessageDisplayHelper_message_encrypted_for_non_existing_session">Existitzen ez den bertsio baterako enkriptatutako mezua</string>
@@ -855,6 +857,7 @@ Gakoaren elkar-trukeraro mezua jaso da protokoloaren bertsio baliogabe baterako.
   <string name="QuoteView_audio">Audioa</string>
   <string name="QuoteView_video">Bideoa</string>
   <string name="QuoteView_photo">Argazkia</string>
+  <string name="QuoteView_media">Multimedia mezua</string>
   <string name="QuoteView_sticker">Eranskailua</string>
   <string name="QuoteView_document">Dokumentua</string>
   <string name="QuoteView_you">Zu</string>
@@ -1066,10 +1069,6 @@ Inportatu \'SMSBackup and Restorekin\' bateragarria den zifratu gabeko babeskopi
   <string name="arrays__high">Altua</string>
   <string name="arrays__max">Maximoa</string>
   <!--plurals.xml-->
-  <plurals name="hours_ago">
-    <item quantity="one">ordu %d</item>
-    <item quantity="other">%d ordu</item>
-  </plurals>
   <!--preferences.xml-->
   <string name="preferences__sms_mms">SMS eta MMS</string>
   <string name="preferences__pref_all_sms_title">Jaso SMS guztiak</string>
