--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -575,9 +575,10 @@ votre numéro de téléphone</string>
   <string name="RegistrationActivity_enter_the_code_we_sent_to_s">Saisir le code envoyé au %s</string>
   <string name="RegistrationActivity_call">Appeler</string>
   <!--RevealableMessageView-->
-  <string name="RevealableMessageView_view_photo">Afficher la photo</string>
-  <string name="RevealableMessageView_viewed">Vu</string>
   <string name="RevealableMessageView_photo">Photo</string>
+  <string name="RevealableMessageView_video">Vidéo</string>
+  <string name="RevealableMessageView_viewed">Vu</string>
+  <string name="RevealableMessageView_outgoing_media">Médias</string>
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">Échec d’enregistrement des modifications apportées aux images</string>
   <!--Search-->
@@ -671,6 +672,7 @@ Vous avez reçu un message d’échange de clés pour une version de protocole i
   <string name="VerifyIdentityActivity_no_safety_number_to_compare_was_found_in_the_clipboard">Aucun numéro de sécurité à comparer n’a été trouvé dans le presse-papiers</string>
   <string name="VerifyIdentityActivity_signal_needs_the_camera_permission_in_order_to_scan_a_qr_code_but_it_has_been_permanently_denied">Signal a besoin de l’autorisation Appareil photo afin de balayer un code QR, mais elle a été refusée définitivement. Veuillez accéder au menu des paramètres des applis, sélectionner Autorisations et activer Appareil photo.</string>
   <string name="VerifyIdentityActivity_unable_to_scan_qr_code_without_camera_permission">Impossible de balayer le code QR sans l’autorisation Appareil photo</string>
+  <!--ViewOnceMessageActivity-->
   <!--MessageDisplayHelper-->
   <string name="MessageDisplayHelper_bad_encrypted_message">Mauvais message chiffré</string>
   <string name="MessageDisplayHelper_message_encrypted_for_non_existing_session">Message chiffré pour une session non existante</string>
@@ -847,6 +849,7 @@ Vous avez reçu un message d’échange de clés pour une version de protocole i
   <string name="QuoteView_audio">Son</string>
   <string name="QuoteView_video">Vidéo</string>
   <string name="QuoteView_photo">Photo</string>
+  <string name="QuoteView_media">Message multimédia</string>
   <string name="QuoteView_sticker">Autocollant</string>
   <string name="QuoteView_document">Document</string>
   <string name="QuoteView_you">Vous</string>
@@ -1057,10 +1060,6 @@ Vous avez reçu un message d’échange de clés pour une version de protocole i
   <string name="arrays__high">Élevée</string>
   <string name="arrays__max">Maximale</string>
   <!--plurals.xml-->
-  <plurals name="hours_ago">
-    <item quantity="one">%d heure</item>
-    <item quantity="other">%d heures</item>
-  </plurals>
   <!--preferences.xml-->
   <string name="preferences__sms_mms">Textos et messages multimédias</string>
   <string name="preferences__pref_all_sms_title">Recevoir tous les textos</string>
@@ -1128,6 +1127,7 @@ Vous avez reçu un message d’échange de clés pour une version de protocole i
   <string name="preferences__linked_devices">Appareils reliés</string>
   <string name="preferences__light_theme">Clair</string>
   <string name="preferences__dark_theme">Sombre</string>
+  <string name="preferences__system_theme">Système</string>
   <string name="preferences__appearance">Apparence</string>
   <string name="preferences__theme">Thème</string>
   <string name="preferences__default">Valeur par défaut</string>
@@ -1331,6 +1331,7 @@ Vous avez reçu un message d’échange de clés pour une version de protocole i
   <string name="RegistrationActivity_please_enter_the_verification_code_sent_to_s">Veuillez saisir le code de vérification envoyé à %s.</string>
   <string name="RegistrationActivity_wrong_number">Mauvais numéro</string>
   <string name="RegistrationActivity_call_me_instead_available_in">Appelez-moi plutôt \n (disponible dans (%1$02d:%2$02d)</string>
+  <string name="RegistrationActivity_contact_signal_support">Contacter l\'assistance Signal</string>
   <string name="BackupUtil_never">Jamais</string>
   <string name="BackupUtil_unknown">Inconnu</string>
   <string name="preferences_app_protection__screen_lock">Verrouillage de l’écran</string>
