--- a/res/values-ko/strings.xml
+++ b/res/values-ko/strings.xml
@@ -239,7 +239,7 @@
   <string name="CustomDefaultPreference_none">없음</string>
   <!--DateUtils-->
   <string name="DateUtils_just_now">방금 전</string>
-  <string name="DateUtils_minutes_ago">%d분 전</string>
+  <string name="DateUtils_minutes_ago">%d분</string>
   <string name="DateUtils_today">오늘</string>
   <string name="DateUtils_yesterday">어제</string>
   <!--DeliveryStatus-->
@@ -525,6 +525,8 @@
   <string name="RegistrationActivity_call">전화걸기</string>
   <!--RevealableMessageView-->
   <string name="RevealableMessageView_photo">사진</string>
+  <string name="RevealableMessageView_video">비디오</string>
+  <string name="RevealableMessageView_outgoing_media">미디어</string>
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">이미지 변경점을 저장할 수 없음</string>
   <!--Search-->
@@ -616,6 +618,7 @@
   <string name="VerifyIdentityActivity_no_safety_number_to_compare_was_found_in_the_clipboard">클립보드에 비교할 수 있는 안전 번호가 없음</string>
   <string name="VerifyIdentityActivity_signal_needs_the_camera_permission_in_order_to_scan_a_qr_code_but_it_has_been_permanently_denied">Signal이 QR 코드를 읽으려면 카메라 권한이 필요하지만 현재 거부되어 있습니다. 앱 설정 메뉴에서 \"권한\"을 선택한 후 \"카메라\" 항목을 허용하세요.</string>
   <string name="VerifyIdentityActivity_unable_to_scan_qr_code_without_camera_permission">QR 코드를 읽으려면 카메라 권한이 필요합니다</string>
+  <!--ViewOnceMessageActivity-->
   <!--MessageDisplayHelper-->
   <string name="MessageDisplayHelper_bad_encrypted_message">잘못 암호화된 메시지</string>
   <string name="MessageDisplayHelper_message_encrypted_for_non_existing_session">존재하지 않는 세션에서 암호화된 메시지</string>
@@ -782,6 +785,7 @@
   <string name="QuoteView_audio">오디오</string>
   <string name="QuoteView_video">동영상</string>
   <string name="QuoteView_photo">사진</string>
+  <string name="QuoteView_media">미디어 메시지</string>
   <string name="QuoteView_sticker">스티커</string>
   <string name="QuoteView_document">문서</string>
   <string name="QuoteView_you">나</string>
@@ -985,9 +989,6 @@
   <string name="arrays__high">높게</string>
   <string name="arrays__max">최대</string>
   <!--plurals.xml-->
-  <plurals name="hours_ago">
-    <item quantity="other">%d시간 전</item>
-  </plurals>
   <!--preferences.xml-->
   <string name="preferences__sms_mms">SMS 및 MMS</string>
   <string name="preferences__pref_all_sms_title">SMS 메시지 수신</string>
@@ -1055,6 +1056,7 @@
   <string name="preferences__linked_devices">연결된 기기</string>
   <string name="preferences__light_theme">밝게</string>
   <string name="preferences__dark_theme">어둡게</string>
+  <string name="preferences__system_theme">시스템</string>
   <string name="preferences__appearance">모양</string>
   <string name="preferences__theme">테마</string>
   <string name="preferences__default">기본</string>
@@ -1255,6 +1257,7 @@
   <string name="RegistrationActivity_please_enter_the_verification_code_sent_to_s">%s에 보낸 인증 코드를 입력하세요</string>
   <string name="RegistrationActivity_wrong_number">잘못된 번호</string>
   <string name="RegistrationActivity_call_me_instead_available_in">대신 전화하기 \n (%1$02d:%2$02d 후 이용 가능)</string>
+  <string name="RegistrationActivity_contact_signal_support">Signal 지원에 문의</string>
   <string name="BackupUtil_never">안함</string>
   <string name="BackupUtil_unknown">알 수 없음</string>
   <string name="preferences_app_protection__screen_lock">화면 잠금</string>
