--- a/res/values-ku/strings.xml
+++ b/res/values-ku/strings.xml
@@ -248,7 +248,7 @@
   <string name="CustomDefaultPreference_none">Hîç</string>
   <!--DateUtils-->
   <string name="DateUtils_just_now">Niha</string>
-  <string name="DateUtils_minutes_ago">%d xulek</string>
+  <string name="DateUtils_minutes_ago">%dx</string>
   <string name="DateUtils_today">Îro</string>
   <string name="DateUtils_yesterday">Doh</string>
   <!--DeliveryStatus-->
@@ -518,6 +518,8 @@
   <string name="RegistrationActivity_call">Gazî</string>
   <!--RevealableMessageView-->
   <string name="RevealableMessageView_photo">Wêne</string>
+  <string name="RevealableMessageView_video">Vîdyo</string>
+  <string name="RevealableMessageView_outgoing_media">Medya</string>
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">Guhertinên weneyê nehate tomarkirin</string>
   <!--Search-->
@@ -599,6 +601,7 @@
   <string name="VerifyIdentityActivity_no_safety_number_to_compare_was_found_in_the_clipboard">Di rûnûsgehê de qet hejmara ewlehiyê ku bidî ber hev tune</string>
   <string name="VerifyIdentityActivity_signal_needs_the_camera_permission_in_order_to_scan_a_qr_code_but_it_has_been_permanently_denied">Ji bo venerîna koda QRyê, Signal pêdivî destûra Kamerayê ye, lê ev bi mayinde hatiye redkirî. Ji kerema xwe bikeve Sazkariyan, \"Destûr\" hilbijêre û rê bide \"Kamera\"yê.</string>
   <string name="VerifyIdentityActivity_unable_to_scan_qr_code_without_camera_permission">Bê destûra Kamerayê koda QRyê nabe ku bihê venerandin.</string>
+  <!--ViewOnceMessageActivity-->
   <!--MessageDisplayHelper-->
   <string name="MessageDisplayHelper_bad_encrypted_message">Peyama xirab şîfrekirî</string>
   <string name="MessageDisplayHelper_message_encrypted_for_non_existing_session">Peyam ji bo danişîna tuneyî hat şîfrekirin</string>
@@ -759,6 +762,7 @@
   <string name="QuoteView_audio">Deng</string>
   <string name="QuoteView_video">Vidyo</string>
   <string name="QuoteView_photo">Wêne</string>
+  <string name="QuoteView_media">Peyama medyayê</string>
   <string name="QuoteView_document">Pelge</string>
   <string name="QuoteView_you">Tu</string>
   <string name="QuoteView_original_missing">Peyama orjînal nehate dîtin</string>
@@ -968,10 +972,6 @@
   <string name="arrays__high">Bilind</string>
   <string name="arrays__max">Herî bilind</string>
   <!--plurals.xml-->
-  <plurals name="hours_ago">
-    <item quantity="one">%d seet</item>
-    <item quantity="other">%d demjimêr</item>
-  </plurals>
   <!--preferences.xml-->
   <string name="preferences__sms_mms">SMS û MMS</string>
   <string name="preferences__pref_all_sms_title">Hemû SMS bistînin</string>
