--- a/res/values-lv/strings.xml
+++ b/res/values-lv/strings.xml
@@ -593,9 +593,10 @@ tālruņa numurs</string>
   <string name="RegistrationActivity_enter_the_code_we_sent_to_s">Ievadiet kodu, ko mēs nosūtījām %s</string>
   <string name="RegistrationActivity_call">Zvanīt</string>
   <!--RevealableMessageView-->
-  <string name="RevealableMessageView_view_photo">Skatīt attēlu</string>
-  <string name="RevealableMessageView_viewed">Skatīts</string>
   <string name="RevealableMessageView_photo">Attēls</string>
+  <string name="RevealableMessageView_video">Video</string>
+  <string name="RevealableMessageView_viewed">Skatīts</string>
+  <string name="RevealableMessageView_outgoing_media">Multivide</string>
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">Nesanāca saglabāt attēla izmaiņas</string>
   <!--Search-->
@@ -690,6 +691,7 @@ Saņemts atslēgas apmaiņas ziņojums par nederīgu protokola versiju. </string
   <string name="VerifyIdentityActivity_no_safety_number_to_compare_was_found_in_the_clipboard">Starpliktuvē netika atrasts drošības kods</string>
   <string name="VerifyIdentityActivity_signal_needs_the_camera_permission_in_order_to_scan_a_qr_code_but_it_has_been_permanently_denied">Signal ir nepieciešama piekļuve kamerai, lai skenētu QR kodu, bet tā ir pastāvīgi aizliekta. Ejiet uz lietotnes iestatījumiem, izvēlieties „Atļaujas“ un ieslēdziet „Kamera“. </string>
   <string name="VerifyIdentityActivity_unable_to_scan_qr_code_without_camera_permission">Nespējīgs skenēt QR kodu bez kameras lietošanas atļaujas</string>
+  <!--ViewOnceMessageActivity-->
   <!--MessageDisplayHelper-->
   <string name="MessageDisplayHelper_bad_encrypted_message">Slikti šifrēta ziņa</string>
   <string name="MessageDisplayHelper_message_encrypted_for_non_existing_session">Ziņa šifrēta neeksistējošai sesijai</string>
@@ -867,6 +869,7 @@ Saņemts atslēgas apmaiņas ziņojums par nederīgu protokola versiju. </string
   <string name="QuoteView_audio">Audio</string>
   <string name="QuoteView_video">Video</string>
   <string name="QuoteView_photo">Attēls</string>
+  <string name="QuoteView_media">Multivides ziņa</string>
   <string name="QuoteView_sticker">Uzlīme</string>
   <string name="QuoteView_document">Dokuments </string>
   <string name="QuoteView_you">Jūs</string>
@@ -1084,11 +1087,6 @@ Saņemts atslēgas apmaiņas ziņojums par nederīgu protokola versiju. </string
   <string name="arrays__high">Augsta</string>
   <string name="arrays__max">Maksimāla</string>
   <!--plurals.xml-->
-  <plurals name="hours_ago">
-    <item quantity="zero">%d stunda</item>
-    <item quantity="one">%d stunda</item>
-    <item quantity="other">%d stundas</item>
-  </plurals>
   <!--preferences.xml-->
   <string name="preferences__sms_mms">SMS un MMS</string>
   <string name="preferences__pref_all_sms_title">Saņemt visus SMS</string>
