--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -79,6 +79,7 @@
   <!--CameraActivity-->
   <string name="CameraActivity_image_save_failure">Afbeelding opslaan mislukt.</string>
   <!--CameraXFragment-->
+  <string name="CameraXFragment_video_recording_available">Tik om een foto te nemen of houd je vinger op de vastleg-knop om een video op te nemen.</string>
   <string name="CameraXFragment_capture_description">Opnemen</string>
   <string name="CameraXFragment_change_camera_description">Camera wisselen</string>
   <string name="CameraXFragment_open_gallery_description">Galerij openen</string>
@@ -272,7 +273,7 @@
   <string name="CustomDefaultPreference_none">Geen</string>
   <!--DateUtils-->
   <string name="DateUtils_just_now">Nu</string>
-  <string name="DateUtils_minutes_ago">%d min</string>
+  <string name="DateUtils_minutes_ago">%dmin</string>
   <string name="DateUtils_today">Vandaag</string>
   <string name="DateUtils_yesterday">Gisteren</string>
   <!--DeliveryStatus-->
@@ -579,11 +580,14 @@ Signal heeft ook toegang nodig tot de media op je apparaat, om bestanden bij te 
   <string name="RegistrationActivity_enter_your_phone_number_to_get_started">Voer je telefoonnummer in om te beginnen</string>
   <string name="RegistrationActivity_you_will_receive_a_verification_code">Je zult een verificatiecode ontvangen. Providerkosten zijn mogelijk van toepassing.</string>
   <string name="RegistrationActivity_enter_the_code_we_sent_to_s">Voer de code in die we hebben verzonden naar %s</string>
+  <string name="RegistrationActivity_phone_number_description">Telefoonnummer</string>
+  <string name="RegistrationActivity_country_code_description">Landcode</string>
   <string name="RegistrationActivity_call">Bellen</string>
   <!--RevealableMessageView-->
-  <string name="RevealableMessageView_view_photo">Foto weergeven</string>
-  <string name="RevealableMessageView_viewed">Gezien</string>
   <string name="RevealableMessageView_photo">Foto</string>
+  <string name="RevealableMessageView_video">Video</string>
+  <string name="RevealableMessageView_viewed">Gezien</string>
+  <string name="RevealableMessageView_outgoing_media">Media</string>
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">Mislukt om bewerkte afbeelding op te slaan</string>
   <!--Search-->
@@ -646,6 +650,7 @@ Signal heeft ook toegang nodig tot de media op je apparaat, om bestanden bij te 
   <string name="ThreadRecord_media_message">Mediabericht</string>
   <string name="ThreadRecord_sticker">Sticker</string>
   <string name="ThreadRecord_disappearing_photo">Zelf-wissende foto</string>
+  <string name="ThreadRecord_disappearing_video">Zelf-wissende video</string>
   <string name="ThreadRecord_s_is_on_signal">%s maakt gebruik van Signal!</string>
   <string name="ThreadRecord_disappearing_messages_disabled">Zelf-wissende berichten uitgeschakeld</string>
   <string name="ThreadRecord_disappearing_message_time_updated_to_s">Berichten zullen zichzelf wissen %s nadat ze gelezen zijn</string>
@@ -680,6 +685,7 @@ Signal heeft ook toegang nodig tot de media op je apparaat, om bestanden bij te 
   <string name="VerifyIdentityActivity_no_safety_number_to_compare_was_found_in_the_clipboard">Geen veiligheidsnummer gevonden op het klembord</string>
   <string name="VerifyIdentityActivity_signal_needs_the_camera_permission_in_order_to_scan_a_qr_code_but_it_has_been_permanently_denied">Signal heeft toegang tot de camera nodig om een QR-code te scannen, maar deze is pertinent geweigerd. Ga naar de instellingen voor deze app, selecteer ‘Machtigingen’ en schakel ‘Camera’ in.</string>
   <string name="VerifyIdentityActivity_unable_to_scan_qr_code_without_camera_permission">Kan QR-code niet scannen zonder toegang tot camera</string>
+  <!--ViewOnceMessageActivity-->
   <!--MessageDisplayHelper-->
   <string name="MessageDisplayHelper_bad_encrypted_message">Verkeerd versleuteld bericht</string>
   <string name="MessageDisplayHelper_message_encrypted_for_non_existing_session">Bericht versleuteld voor niet-bestaande sessie</string>
@@ -721,6 +727,7 @@ Signal heeft ook toegang nodig tot de media op je apparaat, om bestanden bij te 
   <string name="MessageNotifier_media_message">Mediabericht</string>
   <string name="MessageNotifier_sticker">Sticker</string>
   <string name="MessageNotifier_disappearing_photo">Zelf-wissende foto</string>
+  <string name="MessageNotifier_disappearing_video">Zelf-wissende video</string>
   <string name="MessageNotifier_reply">Reageren</string>
   <string name="MessageNotifier_signal_message">Signal-bericht</string>
   <string name="MessageNotifier_unsecured_sms">Onbeveiligde sms</string>
@@ -779,7 +786,7 @@ Signal heeft ook toegang nodig tot de media op je apparaat, om bestanden bij te 
   <string name="WebRtcCallControls_bluetooth_button_description">Bluetooth</string>
   <string name="WebRtcCallControls_mute_button_description">Dempen</string>
   <string name="WebRtcCallControls_your_camera_button_description">Jouw camera</string>
-  <string name="WebRtcCallControls_switch_to_rear_camera_button_description">Wisselen naar camera achter</string>
+  <string name="WebRtcCallControls_switch_to_rear_camera_button_description">Wisselen naar achter-camera</string>
   <string name="WebRtcCallControls_answer_call_description">Oproep beantwoorden</string>
   <string name="WebRtcCallControls_reject_call_description">Oproep afwijzen</string>
   <!--attachment_type_selector-->
@@ -856,6 +863,7 @@ Signal heeft ook toegang nodig tot de media op je apparaat, om bestanden bij te 
   <string name="QuoteView_audio">Audio</string>
   <string name="QuoteView_video">Video</string>
   <string name="QuoteView_photo">Foto</string>
+  <string name="QuoteView_media">Mediabericht</string>
   <string name="QuoteView_sticker">Sticker</string>
   <string name="QuoteView_document">Document</string>
   <string name="QuoteView_you">Jij</string>
@@ -932,7 +940,7 @@ Signal heeft ook toegang nodig tot de media op je apparaat, om bestanden bij te 
   <string name="log_submit_activity__button_got_it">Begrepen</string>
   <string name="log_submit_activity__button_compose_email">E-mail opstellen</string>
   <string name="log_submit_activity__this_log_will_be_posted_online">Dit logbestand wordt publiekelijk beschikbaar gesteld op internet zodat de ontwikkelaars en vrijwilligers het kunnen bestuderen. Je kunt het bekijken en aanpassen voor je het verzendt.</string>
-  <string name="log_submit_activity__loading_logs">Logbestanden inladen…</string>
+  <string name="log_submit_activity__loading_logs">Logbestanden aan het inladen…</string>
   <string name="log_submit_activity__uploading_logs">Logbestanden aan het uploaden…</string>
   <string name="log_submit_activity__success">Succesvol geüpload!</string>
   <string name="log_submit_activity__copy_this_url_and_add_it_to_your_issue">Nog één stap om je foutrapport in te dienen: kopieer deze URL en voeg deze toe aan een foutrapport op GitHub (https://github.com/signalapp/Signal-Android/issues) of aan een e-mail naar de helpdesk (support@signal.org). Dit is de URL die je moet toevoegen:\n\n<b>%1$s</b>\n</string>
@@ -1067,8 +1075,8 @@ Signal heeft ook toegang nodig tot de media op je apparaat, om bestanden bij te 
   <string name="arrays__max">Maximaal</string>
   <!--plurals.xml-->
   <plurals name="hours_ago">
-    <item quantity="one">%d uur</item>
-    <item quantity="other">%d uur</item>
+    <item quantity="one">%du</item>
+    <item quantity="other">%du</item>
   </plurals>
   <!--preferences.xml-->
   <string name="preferences__sms_mms">Sms en mms</string>
@@ -1137,6 +1145,7 @@ Signal heeft ook toegang nodig tot de media op je apparaat, om bestanden bij te 
   <string name="preferences__linked_devices">Gekoppelde apparaten</string>
   <string name="preferences__light_theme">Licht</string>
   <string name="preferences__dark_theme">Donker</string>
+  <string name="preferences__system_theme">Systeem</string>
   <string name="preferences__appearance">Uiterlijk</string>
   <string name="preferences__theme">Thema</string>
   <string name="preferences__default">Systeem-standaard</string>
@@ -1340,6 +1349,9 @@ Signal heeft ook toegang nodig tot de media op je apparaat, om bestanden bij te 
   <string name="RegistrationActivity_please_enter_the_verification_code_sent_to_s">Voer de registratiecode in die naar %s verzonden is.</string>
   <string name="RegistrationActivity_wrong_number">Verkeerd nummer</string>
   <string name="RegistrationActivity_call_me_instead_available_in">Bel me \n (beschikbaar over %1$02d:%2$02d)</string>
+  <string name="RegistrationActivity_contact_signal_support">Contact opnemen met Signal-ondersteuning</string>
+  <string name="RegistrationActivity_code_support_subject">Signal-registratie - Verificatiecode voor Android</string>
+  <string name="RegistrationActivity_code_support_body">Onderwerp: Signal-registration - Verificatiecode voor Android\nApparaat-informatie: %1$s\nAndroid-versie: %2$s\nSignal-versie: %3$s\nLocale: %4$s</string>
   <string name="BackupUtil_never">Nooit</string>
   <string name="BackupUtil_unknown">Onbekend</string>
   <string name="preferences_app_protection__screen_lock">Schermvergrendeling</string>
