--- a/res/values-pa/strings.xml
+++ b/res/values-pa/strings.xml
@@ -12,6 +12,7 @@
   <!--AlbumThumbnailView-->
   <string name="AlbumThumbnailView_plus">\+%d</string>
   <!--ApplicationMigrationActivity-->
+  <string name="ApplicationMigrationActivity__signal_is_updating">Signal ਅਪਡੇਟ ਹੋ ਰਿਹਾ ਹੈ..</string>
   <!--ApplicationPreferencesActivity-->
   <string name="ApplicationPreferencesActivity_currently_s">ਇਸ ਵੇਲੇ %s</string>
   <string name="ApplicationPreferenceActivity_you_havent_set_a_passphrase_yet">ਤੁਸੀਂ ਅਜੇ ਆਪਣਾ ਪਾਸਫਰੇਜ ਨਹੀਂ ਸੈੱਟ ਕੀਤਾ ਹੈ!</string>
@@ -62,6 +63,7 @@
   <string name="AttachmentManager_signal_requires_location_information_in_order_to_attach_a_location">Signal ਨੂੰ ਸਥਾਨ ਜੋੜਨ ਲਈ ਸਥਾਨ ਦੀ ਇਜਾਜ਼ਤ ਦੀ ਲੋੜ ਹੈ, ਜੋ ਇਸ ਕੋਲ ਨਹੀਂ ਹਨ | ਕਿਰਪਾ ਕਰਕੇ ਐਪ ਸੈਟਿੰਗ ਮੇਨੂ  ਤੇ ਜਾਓ, \"ਅਨੁਮਤੀਆਂ\" ਚੁਣੋ ਅਤੇ \"ਸਥਾਨ\" ਸਮਰੱਥ ਕਰੋ.</string>
   <string name="AttachmentManager_signal_requires_the_camera_permission_in_order_to_take_photos_but_it_has_been_permanently_denied">ਫੋਟੋਆਂ ਖਿੱਚਣ ਲਈ Signal ਨੂੰ ਕੈਮਰੇ ਦੀ ਅਨੁਮਤੀ ਦੀ ਲੋੜ ਹੈ, ਜੋ ਇਸ ਕੋਲ ਨਹੀਂ ਹਨ | ਕਿਰਪਾ ਕਰਕੇ ਐਪ ਸੈਟਿੰਗਾਂ ਚ ਜਾਓ , \"ਅਨੁਮਤੀਆਂ\" ਚੁਣੋ ਅਤੇ \"ਕੈਮਰਾ\" ਨੂੰ ਸਮਰੱਥ ਕਰੋ.</string>
   <!--AttachmentUploadJob-->
+  <string name="AttachmentUploadJob_uploading_media">ਮੀਡੀਆ ਅਪਲੋਡ ਹੋ ਰਿਹਾ ਹੈ</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">ਔਡੀਓ ਚਲੌਣ ਵਿੱਚ ਗਲਤੀ</string>
   <!--BlockedContactsActivity-->
@@ -76,7 +78,11 @@
   <!--CameraActivity-->
   <string name="CameraActivity_image_save_failure">ਫੋਟ ਨੂੰ ਦਰਜ ਕਰਨ ਵਿਚ ਅਸਫਲ </string>
   <!--CameraXFragment-->
+  <string name="CameraXFragment_capture_description">ਕੈਪਚਰ</string>
+  <string name="CameraXFragment_change_camera_description">ਕੈਮਰਾ ਬਦਲੋ</string>
+  <string name="CameraXFragment_open_gallery_description">ਗੈਲਰੀ ਖੋਲ੍ਹੋ</string>
   <!--CameraContacts-->
+  <string name="CameraContacts_recent_contacts">ਤਾਜ਼ਾ ਸੰਪਰਕ</string>
   <string name="CameraContacts__menu_search">ਖੋਜ</string>
   <!--ClearProfileActivity-->
   <string name="ClearProfileActivity_remove">ਹਟਾਓ </string>
@@ -253,7 +259,7 @@
   <string name="CustomDefaultPreference_none">ਕੋਈ ਨਹੀਂ</string>
   <!--DateUtils-->
   <string name="DateUtils_just_now">ਹੁਣ</string>
-  <string name="DateUtils_minutes_ago">%d ਮਿੰਟ </string>
+  <string name="DateUtils_minutes_ago">%dm</string>
   <string name="DateUtils_today">ਅੱਜ </string>
   <string name="DateUtils_yesterday">ਕੱਲ </string>
   <!--DeliveryStatus-->
@@ -548,6 +554,8 @@
   <string name="RegistrationActivity_call">ਕਾਲ</string>
   <!--RevealableMessageView-->
   <string name="RevealableMessageView_photo">ਫੋਟੋ</string>
+  <string name="RevealableMessageView_video">ਵੀਡੀਓ</string>
+  <string name="RevealableMessageView_outgoing_media">ਮੀਡੀਆ</string>
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">ਚਿੱਤਰ ਬਦਲਾਅ ਨੂੰ ਸੁਰੱਖਿਅਤ ਕਰਨ ਵਿੱਚ ਅਸਫਲ</string>
   <!--Search-->
@@ -640,6 +648,7 @@
   <string name="VerifyIdentityActivity_no_safety_number_to_compare_was_found_in_the_clipboard">ਕਲਿਪਬੋਰਡ ਵਿੱਚ ਤੁਲਨਾ ਕਰਨ ਲਈ ਕੋਈ ਸੁਰੱਖਿਆ ਨੰਬਰ ਨਹੀਂ ਮਿਲਿਆ</string>
   <string name="VerifyIdentityActivity_signal_needs_the_camera_permission_in_order_to_scan_a_qr_code_but_it_has_been_permanently_denied">ਕਯੂ.ਆਰ ਕੋਡ ਸਕੈਨ ਕਰਨ ਲਈ Signal ਨੂੰ ਕੈਮਰੇ ਦੀ ਅਨੁਮਤੀ ਦੀ ਲੋੜ ਹੈ, ਜੋ ਇਸ ਕੋਲ ਨਹੀਂ ਹਨ | ਕਿਰਪਾ ਕਰਕੇ ਐਪ ਸੈਟਿੰਗਾਂ ਚ ਜਾਓ , \"ਅਨੁਮਤੀਆਂ\" ਚੁਣੋ ਅਤੇ \"ਕੈਮਰਾ\" ਨੂੰ ਸਮਰੱਥ ਕਰੋ.</string>
   <string name="VerifyIdentityActivity_unable_to_scan_qr_code_without_camera_permission">ਕੈਮਰਾ ਦੀ ਅਨੁਮਤੀ ਤੋਂ ਬਿਨਾਂ QR ਕੋਡ ਨੂੰ ਸਕੈਨ ਕਰਨ ਵਿੱਚ ਅਸਮਰੱਥ</string>
+  <!--ViewOnceMessageActivity-->
   <!--MessageDisplayHelper-->
   <string name="MessageDisplayHelper_bad_encrypted_message">ਗਲਤ ਏਨਕ੍ਰਿਪਟ ਸੁਨੇਹਾ</string>
   <string name="MessageDisplayHelper_message_encrypted_for_non_existing_session">ਗੈਰ-ਮੌਜੂਦ ਸੈਸ਼ਨ ਲਈ ਇਨਕਰਿਪਟਡ ਸੁਨੇਹਾ</string>
@@ -804,6 +813,7 @@
   <string name="QuoteView_audio">ਆਡੀਓ)</string>
   <string name="QuoteView_video">ਵੀਡੀਓ</string>
   <string name="QuoteView_photo">ਫੋਟੋ</string>
+  <string name="QuoteView_media">ਮੀਡੀਆ ਸੁਨੇਹਾ</string>
   <string name="QuoteView_sticker">ਸਟਿੱਕਰ</string>
   <string name="QuoteView_document">ਦਸਤਾਵੇਜ਼</string>
   <string name="QuoteView_you">ਤੁਸੀਂ</string>
@@ -1014,10 +1024,6 @@
   <string name="arrays__high">ਉੱਚਾ</string>
   <string name="arrays__max">ਅਧਿਕਤਮ</string>
   <!--plurals.xml-->
-  <plurals name="hours_ago">
-    <item quantity="one">%d ਘੰਟੇ</item>
-    <item quantity="other">%d ਘੰਟੇ</item>
-  </plurals>
   <!--preferences.xml-->
   <string name="preferences__sms_mms">SMS ਅਤੇ ਐਮਐਮਐਸ</string>
   <string name="preferences__pref_all_sms_title">ਸਾਰੇ SMS ਪ੍ਰਾਪਤ ਕਰੋ</string>
