--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -85,6 +85,7 @@
   <!--CameraActivity-->
   <string name="CameraActivity_image_save_failure">Не удалось сохранить изображение.</string>
   <!--CameraXFragment-->
+  <string name="CameraXFragment_video_recording_available">Нажмите, чтобы сделать фото, или удерживайте палец на кнопке, чтобы записать видео.</string>
   <string name="CameraXFragment_capture_description">Снять</string>
   <string name="CameraXFragment_change_camera_description">Сменить камеру</string>
   <string name="CameraXFragment_open_gallery_description">Открыть галерею</string>
@@ -245,8 +246,8 @@
   <string name="ConversationFragment_quoted_message_not_found">Исходное сообщение не найдено</string>
   <string name="ConversationFragment_quoted_message_no_longer_available">Исходное сообщение больше не доступно</string>
   <string name="ConversationFragment_failed_to_open_message">Не удалось открыть сообщение</string>
-  <string name="ConversationFragment_you_can_swipe_to_the_right_reply">Вы можете провести вправо на любом сообщении, чтобы быстро ответить</string>
-  <string name="ConversationFragment_you_can_swipe_to_the_left_reply">Вы можете провести влево на любом сообщении, чтобы быстро ответить</string>
+  <string name="ConversationFragment_you_can_swipe_to_the_right_reply">Вы можете провести вправо по любому сообщению, чтобы быстро ответить</string>
+  <string name="ConversationFragment_you_can_swipe_to_the_left_reply">Вы можете провести влево по любому сообщению, чтобы быстро ответить</string>
   <!--ConversationListActivity-->
   <string name="ConversationListActivity_there_is_no_browser_installed_on_your_device">На вашем устройстве не установлен браузер.</string>
   <!--ConversationListFragment-->
@@ -300,7 +301,7 @@
   <string name="CustomDefaultPreference_none">Нет</string>
   <!--DateUtils-->
   <string name="DateUtils_just_now">Только что</string>
-  <string name="DateUtils_minutes_ago">%d мин</string>
+  <string name="DateUtils_minutes_ago">%dм</string>
   <string name="DateUtils_today">Сегодня</string>
   <string name="DateUtils_yesterday">Вчера</string>
   <!--DeliveryStatus-->
@@ -610,11 +611,14 @@
   <string name="RegistrationActivity_enter_your_phone_number_to_get_started">Введите свой номер телефона, чтобы начать</string>
   <string name="RegistrationActivity_you_will_receive_a_verification_code">Вы получите код подтверждения. Вашим оператором может взиматься плата за входящее SMS.</string>
   <string name="RegistrationActivity_enter_the_code_we_sent_to_s">Введите код, который мы отправили на %s</string>
+  <string name="RegistrationActivity_phone_number_description">Номер телефона</string>
+  <string name="RegistrationActivity_country_code_description">Код страны</string>
   <string name="RegistrationActivity_call">Позвонить</string>
   <!--RevealableMessageView-->
-  <string name="RevealableMessageView_view_photo">Просмотреть фотографию</string>
-  <string name="RevealableMessageView_viewed">Просмотрено</string>
   <string name="RevealableMessageView_photo">Фото</string>
+  <string name="RevealableMessageView_video">Видео</string>
+  <string name="RevealableMessageView_viewed">Просмотрено</string>
+  <string name="RevealableMessageView_outgoing_media">Медиа</string>
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">Не удалось сохранить изменения изображения</string>
   <!--Search-->
@@ -677,6 +681,7 @@
   <string name="ThreadRecord_media_message">Медиа-сообщение</string>
   <string name="ThreadRecord_sticker">Стикер</string>
   <string name="ThreadRecord_disappearing_photo">Исчезающая фотография</string>
+  <string name="ThreadRecord_disappearing_video">Исчезающее видео</string>
   <string name="ThreadRecord_s_is_on_signal">%s теперь в Signal!</string>
   <string name="ThreadRecord_disappearing_messages_disabled">Исчезающие сообщения отключены</string>
   <string name="ThreadRecord_disappearing_message_time_updated_to_s">Время исчезновения сообщений – %s</string>
@@ -711,6 +716,7 @@
   <string name="VerifyIdentityActivity_no_safety_number_to_compare_was_found_in_the_clipboard">В буфере обмена код безопасности не найден</string>
   <string name="VerifyIdentityActivity_signal_needs_the_camera_permission_in_order_to_scan_a_qr_code_but_it_has_been_permanently_denied">Signal требуется разрешение на доступ к камере для сканирования QR-кода, но оно было вами отклонено. Нажмите «Продолжить», чтобы перейти в настройки приложения, откройте «Разрешения» и включите «Камера».</string>
   <string name="VerifyIdentityActivity_unable_to_scan_qr_code_without_camera_permission">Не удалось просканировать QR-код из-за отсутствия разрешения на доступ к камере</string>
+  <!--ViewOnceMessageActivity-->
   <!--MessageDisplayHelper-->
   <string name="MessageDisplayHelper_bad_encrypted_message">Сообщение испорчено</string>
   <string name="MessageDisplayHelper_message_encrypted_for_non_existing_session">Сообщение зашифровано для несуществующей сессии</string>
@@ -752,6 +758,7 @@
   <string name="MessageNotifier_media_message">Медиа-сообщение</string>
   <string name="MessageNotifier_sticker">Стикер</string>
   <string name="MessageNotifier_disappearing_photo">Исчезающая фотография</string>
+  <string name="MessageNotifier_disappearing_video">Исчезающее видео</string>
   <string name="MessageNotifier_reply">Ответить</string>
   <string name="MessageNotifier_signal_message">Сообщение Signal</string>
   <string name="MessageNotifier_unsecured_sms">Незащищенное SMS</string>
@@ -889,6 +896,7 @@
   <string name="QuoteView_audio">Аудио</string>
   <string name="QuoteView_video">Видео</string>
   <string name="QuoteView_photo">Фото</string>
+  <string name="QuoteView_media">Медиа-сообщение</string>
   <string name="QuoteView_sticker">Стикер</string>
   <string name="QuoteView_document">Документ</string>
   <string name="QuoteView_you">Вы</string>
@@ -1114,10 +1122,10 @@
   <string name="arrays__max">Максимальный</string>
   <!--plurals.xml-->
   <plurals name="hours_ago">
-    <item quantity="one">%d час</item>
-    <item quantity="few">%d часа</item>
-    <item quantity="many">%d часов</item>
-    <item quantity="other">%d часов</item>
+    <item quantity="one">%dч.</item>
+    <item quantity="few">%dч.</item>
+    <item quantity="many">%dч.</item>
+    <item quantity="other">%dч.</item>
   </plurals>
   <!--preferences.xml-->
   <string name="preferences__sms_mms">SMS и MMS</string>
@@ -1186,6 +1194,7 @@
   <string name="preferences__linked_devices">Привязанные устройства</string>
   <string name="preferences__light_theme">Светлая</string>
   <string name="preferences__dark_theme">Темная</string>
+  <string name="preferences__system_theme">Системная</string>
   <string name="preferences__appearance">Внешний вид</string>
   <string name="preferences__theme">Тема</string>
   <string name="preferences__default">По умолчанию</string>
@@ -1391,6 +1400,9 @@
   <string name="RegistrationActivity_please_enter_the_verification_code_sent_to_s">Пожалуйста, введите код подтверждения, отправленный на %s.</string>
   <string name="RegistrationActivity_wrong_number">Неправильный номер</string>
   <string name="RegistrationActivity_call_me_instead_available_in">Позвоните мне вместо SMS \n (Доступно через %1$02d:%2$02d)</string>
+  <string name="RegistrationActivity_contact_signal_support">Связаться со службой поддержки Signal</string>
+  <string name="RegistrationActivity_code_support_subject">Регистрация в Signal - код подтверждения для Android</string>
+  <string name="RegistrationActivity_code_support_body">Тема: Регистрация в Signal - код подтверждения для Android\nИнформация об устройстве: %1$s\nВерсия Android: %2$s\n Версия Signal: %3$s\nРегион: %4$s</string>
   <string name="BackupUtil_never">Никогда</string>
   <string name="BackupUtil_unknown">Неизвестно</string>
   <string name="preferences_app_protection__screen_lock">Блокировка экрана</string>
