--- a/res/values-sr/strings.xml
+++ b/res/values-sr/strings.xml
@@ -264,7 +264,7 @@
   <string name="CustomDefaultPreference_none">Ништа</string>
   <!--DateUtils-->
   <string name="DateUtils_just_now">Сад</string>
-  <string name="DateUtils_minutes_ago">%d минута</string>
+  <string name="DateUtils_minutes_ago">%d m</string>
   <string name="DateUtils_today">Данас</string>
   <string name="DateUtils_yesterday">Јуче</string>
   <!--DeliveryStatus-->
@@ -513,6 +513,8 @@
   <string name="RegistrationActivity_call">Позови</string>
   <!--RevealableMessageView-->
   <string name="RevealableMessageView_photo">Слика</string>
+  <string name="RevealableMessageView_video">Видео</string>
+  <string name="RevealableMessageView_outgoing_media">Медији</string>
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">Неуспех уписа промене слике</string>
   <!--Search-->
@@ -586,6 +588,7 @@
   <string name="VerifyIdentityActivity_our_signal_safety_number">Наш Signal безбедносни број:</string>
   <string name="VerifyIdentityActivity_no_app_to_share_to">Изгледа да немате ниједну апликацију преко које бисте могли да делите.</string>
   <string name="VerifyIdentityActivity_no_safety_number_to_compare_was_found_in_the_clipboard">У клипборду нема безбедносног броја за упоређивање.</string>
+  <!--ViewOnceMessageActivity-->
   <!--MessageDisplayHelper-->
   <string name="MessageDisplayHelper_bad_encrypted_message">Лоше шифрована порука</string>
   <string name="MessageDisplayHelper_message_encrypted_for_non_existing_session">Порука шифрована за непостојећу сесију</string>
@@ -728,6 +731,7 @@
   <string name="QuoteView_audio">Звук</string>
   <string name="QuoteView_video">Видео</string>
   <string name="QuoteView_photo">Слика</string>
+  <string name="QuoteView_media">Без текста</string>
   <string name="QuoteView_document">Документ</string>
   <string name="QuoteView_you">Ви</string>
   <string name="QuoteView_original_missing">Оригинална порука није нађена</string>
@@ -918,11 +922,6 @@
   <string name="arrays__high">Висок</string>
   <string name="arrays__max">Највиши</string>
   <!--plurals.xml-->
-  <plurals name="hours_ago">
-    <item quantity="one">%d сат</item>
-    <item quantity="few">%d сата</item>
-    <item quantity="other">%d сати</item>
-  </plurals>
   <!--preferences.xml-->
   <string name="preferences__sms_mms">СМС и ММС</string>
   <string name="preferences__pref_all_sms_title">Примај све СМС</string>
